[package]
name = "mini-replit"
version = "0.1.0"
authors = ["Colton D. <colton@donn.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rlua = "0.19.4"
rstest = "0.16"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
